# Single-Multi-Objective-Genetic-Algorithm

./: .gitignore  CMakeLists.txt  GA_And_Robot.pro  General.h  Genetic_Algorithm.pro  README.md  chromosome.h  ga.h  main.cpp  population.h  roulettewheel.h
GA-NSGAII/: CMakeLists.txt  GeneticAlgorithms.pro
GA-NSGAII/example/: chromosomeintint.cpp  chromosomeintint.h  chromosomemdoubleint.cpp  chromosomemdoubleint.h  chromosomemintint.cpp  chromosomemintint.h  main.cpp  roulettewheel.cpp  roulettewheel.h  tournamentm.h
GA-NSGAII/include/: General.h  chromosome.h  ga.h  nsgaii.h  population.h  singleobjectivega.h
GA-NSGAII/src/: General.cpp  nsgaii.cpp  singleobjectivega.cpp
GUIGeneticAlgorithms/: GUIGeneticAlgorithms.pro
GUIGeneticAlgorithms/gui/: mainwindow.ui  paramsdockwidget.ui  solutionlisterdockwidget.ui
GUIGeneticAlgorithms/include/: algorithmrunner.h  mainwindow.h  paramsdockwidget.h  paretooptimalfrontwidget.h  solutionlisterdockwidget.h
GUIGeneticAlgorithms/src/: algorithmrunner.cpp  main.cpp  mainwindow.cpp  paramsdockwidget.cpp  paretooptimalfrontwidget.cpp  solutionlisterdockwidget.cpp
example/: chromosomeintint.cpp  chromosomeintint.h  chromosomemintint.cpp  chromosomemintint.h  main.cpp  roulettewheel.h  tournamentm.cpp  tournamentm.h
extern params/: params.txt
include/: AlgoString.h  General.h  chromosome.h  ga.h  nsgaii.h  population.h  singleobjectivega.h
